# CDManager

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  config.h  configure.ac
SQL/: Makefile.am  createDB.sql  createFillScript  populateDB.sql
data/: CDManager.desktop  Films.foot  Films.head  Genres.dat.de  Genres.dat.es  Makefile.am  Movies.foot  Movies.head  Records.foot  Records.head
doc/: CDManager.html.de  CDManager.html.en  CDManager.html.es  Makefile.am
po/: POTFILES.in  de.po  en.po  es.po
src/: Actor.h  ActorList.cpp  ActorList.h  CDAppl.cpp  CDAppl.h  CDManager.cpp  CDManager.h  CDManagerDB.cpp  CDManagerDel.cpp  CDManagerEI.cpp  CDManagerUndo.cpp  CDType.cpp  CDType.h  CDWriter.cpp  CDWriter.h  Celebrity.cpp  Celebrity.h  DB.cpp  DB.h  Director.h  Film.cpp  Film.h  FilmData.cpp  FilmData.h  FilmList.cpp  FilmList.h  Genres.cpp  Genres.h  IMDbProgress.cpp  IMDbProgress.h  IconAuthor.h  IconProgram.h  ImportIMDb.cpp  ImportIMDb.h  Interpret.cpp  Interpret.h  LangDlg.cpp  LangDlg.h  LangImg.cpp  LangImg.h  (+57 more)
