## Process this file with automake to produce Makefile.in

pkgdata_DATA=Films.foot Films.head Records.foot Records.head de.png	\
	     en.png es.png fr.png it.png pl.png pt.png Genres.dat	\
	     Genres.dat.de Genres.dat.es in.png fi.png no.png rs.png	\
	     sv.png

desktopdir=$(datadir)/applications
icondir=$(datadir)/icons

desktop_DATA = CDManager.desktop
icon_DATA = CDManager.png


EXTRA_DIST=$(pkgdata_DATA) $(desktop_DATA) $(icon_DATA)
